idl-toolkit/models/oldtest/test/errors/custom/IncludableDescription.vmodl
/* **********************************************************
 * Copyright 2013 VMware, Inc.  All rights reserved.
 *      -- VMware Confidential
 * **********************************************************/
package com.vmware.vapi.test.errors.custom;

import vmodl.lang.Includable;

/** Includable mixin which provides a description field */
@Includable
class IncludableDescription {

    /** Description */
    String description;
}
